package gourd;

public class Being{
    String name;
};