package gourd;

public class Scorpion extends Monster{
    public Scorpion(){
        hp=200;
        atk=10;
        mp=1;
        name="蝎子精";
    }
}