package gourd;

public class Vat extends Being{
    public void receiveWater(){
        name="缸";
        System.out.println(name+" I receive a drop of water...");
    }
}